@@ -1,0 +1,7 @@
+AC_INIT(w3m.el)
+AC_SET_MAKE
+AC_PROG_INSTALL
+AC_CHECK_EMACS
+AC_PATH_LISPDIR
+AC_ADD_LOAD_PATH
+AC_OUTPUT(Makefile)
