@@ -1,3 +1,9 @@
+2001-03-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* Makefile.in, aclocal.m4, configure.in, install-sh, w3mhack.el:
+	New files.
+	* Makefile: Removed.
+
 2001-03-14  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>
 
 	* w3m.el: Split file.
